--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-/node_modules/
+.DS_Store
+node_modules
+TODOs.md
+test/e2e/reports
+test/e2e/screenshots
+selenium-debug.log
+dist/*.gz
+dist/*.map
+explorations
+docs/.vuepress/dist
+yarn-error.log
 .idea
+.vscode/settings.json
+.env
+selenium-server.log
+local.log
+browserstack.err
