--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "web3modal-vue3",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A single Web3 / Ethereum provider solution for all Wallets",
-  "main": "./src/Web3ModalVue.vue",
   "private": false,
   "keywords": [
     "web3",
@@ -20,12 +19,31 @@
     "torus",
     "authereum",
     "frame",
-    "vue3"
+    "vue3",
+    "typescript"
   ],
+  "main": "./dist/web3modal-vue3.umd.js",
+  "module": "./dist/web3modal-vue3.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/web3modal-vue3.es.js",
+      "require": "./dist/web3modal-vue3.umd.js"
+    },
+    "./dist/style.css": "./dist/style.css"
+  },
+  "types": "src/types/index.d.ts",
+  "jsdelivr": "dist/web3modal.js",
   "files": [
-    "src"
+    "src",
+    "dist/*.js",
+    "vetur/tags.json",
+    "vetur/attributes.json"
   ],
-  "author": "mfw78",
+  "author": {
+    "name": "mfw78",
+    "email": "mfw78@chasingseed.com",
+    "url": "https://chasingseed.bzz.link/"
+  },
   "license": "MIT",
   "homepage": "https://github.com/mfw78/web3modal-vue3",
   "repository": {
@@ -35,8 +53,51 @@
   "bugs": {
     "url": "https://github.com/mfw78/web3modal-vue3/issues"
   },
+  "vetur": {
+    "tags": "vetur/tags.json",
+    "attributes": "vetur/attributes.json"
+  },
   "dependencies": {
     "detect-browser": "^5.2.0",
-    "vue3-styled-components": "^1.2.1"
+    "ethers": "^5.4.6"
+  },
+  "scripts": {
+    "build": "vite build",
+    "changelog": "conventional-changelog -p angular -r 2 -i CHANGELOG.md -s"
+  },
+  "devDependencies": {
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@types/lodash": "^4.14.172",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "@vitejs/plugin-vue": "^1.6.0",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-typescript": "^4.5.13",
+    "babel-eslint": "^10.1.0",
+    "conventional-changelog-cli": "^2.1.1",
+    "equal-vue": "^0.79.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier-vue": "^3.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-vue": "^7.17.0",
+    "prettier": "^2.3.2",
+    "rollup": "^2.56.3",
+    "rollup-plugin-buble": "^0.19.8",
+    "rollup-plugin-flow-no-whitespace": "^1.0.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.4.2",
+    "vite": "^2.5.1",
+    "vite-plugin-banner": "^0.1.3",
+    "vue": "^3.2.6",
+    "vue-docgen-api": "^4.41.1",
+    "vue3-styled-components": "^1.2.1",
+    "web3": "^1.5.2"
   }
 }
