--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
   },
   "scripts": {
     "build": "vite build",
-    "changelog": "conventional-changelog -p angular -r 2 -i CHANGELOG.md -s"
+    "changelog": "conventional-changelog -p angular -r 2 -i CHANGELOG.md -s",
+    "release": "bash scripts/release.sh",
+    "commit": "git-cz"
   },
   "devDependencies": {
     "@rollup/plugin-babel": "^5.3.0",
@@ -85,6 +87,7 @@
     "eslint-plugin-prettier-vue": "^3.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.17.0",
+    "git-cz": "^4.7.6",
     "prettier": "^2.3.2",
     "rollup": "^2.56.3",
     "rollup-plugin-buble": "^0.19.8",
