--- a/.eslintrc
+++ b/.eslintrc
@@ -1,59 +1,95 @@
 {
-    "rules": {
-      "@typescript-eslint/ban-ts-ignore": ["off"],
-      "@typescript-eslint/camelcase": ["off"],
-      "@typescript-eslint/explicit-function-return-type": ["off"],
-      "@typescript-eslint/interface-name-prefix": ["off"],
-      "@typescript-eslint/no-explicit-any": ["off"],
-      "@typescript-eslint/no-unused-expressions": ["off"],
-      "@typescript-eslint/no-var-requires": ["off"],
-      "@typescript-eslint/no-use-before-define": ["off"],
-      "comma-dangle": ["error", "never"],
-      "no-async-promise-executor": ["off"],
-      "no-empty-pattern": ["off"],
-      "no-undef": ["error"],
-      "no-var": ["error"],
-      "object-curly-spacing": ["error", "always"],
-      "quotes": [
-        "error",
-        "double",
-        {
-          "allowTemplateLiterals": true
-        }
-      ],
-      "semi": ["error", "never"],
-      "spaced-comment": ["off"],
-      "no-prototype-builtins": ["off"],
-      "sort-keys": ["off"],
-      "space-before-function-paren": ["off"],
-      "indent": ["off"],
-      "symbol-description": ["off"]
-    },
-    "env": {
-      "browser": true,
-      "es6": true
-    },
-    "extends": [
-      "standard",
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:vue/vue3-recommended",
-      "plugin:prettier-vue/recommended",
-      "prettier"
+  "rules": {
+    "@typescript-eslint/ban-ts-ignore": ["off"],
+    "@typescript-eslint/camelcase": ["off"],
+    "@typescript-eslint/explicit-function-return-type": ["off"],
+    "@typescript-eslint/interface-name-prefix": ["off"],
+    "@typescript-eslint/no-explicit-any": ["off"],
+    "@typescript-eslint/no-unused-expressions": ["off"],
+    "@typescript-eslint/no-var-requires": ["off"],
+    "@typescript-eslint/no-use-before-define": ["off"],
+    "comma-dangle": ["error", "never"],
+    "no-async-promise-executor": ["off"],
+    "no-empty-pattern": ["off"],
+    "no-undef": ["error"],
+    "no-var": ["error"],
+    "object-curly-spacing": ["error", "always"],
+    "quotes": [
+      "error",
+      "double",
+      {
+        "allowTemplateLiterals": true
+      }
     ],
-    "parser": "vue-eslint-parser",
-    "parserOptions": {
-      "parser": "babel-eslint",
-      "sourceType": "module"
-    },
-    "globals": {
-      "describe": "readonly",
-      "before": "readonly",
-      "beforeEach": "readonly",
-      "after": "readonly",
-      "afterEach": "readonly",
-      "context": "readonly",
-      "it": "readonly"
-    }
+    "semi": ["error", "never"],
+    "spaced-comment": ["off"],
+    "no-prototype-builtins": ["off"],
+    "sort-keys": ["off"],
+    "space-before-function-paren": ["off"],
+    "indent": ["off"],
+    "symbol-description": ["off"]
+    /* Preserved when eslint-plugin-md starts working.
+    "md/remark": [
+      "error",
+      {
+        // This object corresponds to object you would export in .remarkrc file
+        "plugins": [
+          "remark-frontmatter",
+          "remark-preset-lint-consistent",
+          "remark-preset-lint-recommended",
+          "remark-preset-lint-markdown-style-guide",
+          ["remark-lint-maximum-line-length", 100],
+          [
+            "remark-retext",
+            ["retext-english", "retext-syntax-urls", ["retext-spell", "dictionary-en-us"]]
+          ],
+          "retext-repeated-words",
+          "retext-usage"
+        ]
+      }
+    ]*/
+  },
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "extends": [
+    "standard",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:vue/vue3-recommended",
+    "plugin:prettier/recommended",
+    //"plugin:md/recommended",
+    "prettier"
+  ],
+  "plugins": ["eslint-plugin-prettier"],
+  "parser": "babel-eslint",
+  "globals": {
+    "describe": "readonly",
+    "before": "readonly",
+    "beforeEach": "readonly",
+    "after": "readonly",
+    "afterEach": "readonly",
+    "context": "readonly",
+    "it": "readonly"
   }
-  
+  /* Preserved for when eslint-plugin-md starts working.
+  "overrides": [
+    {
+      "files": ["*.md"],
+      "parser": "markdown-eslint-parser",
+      "rules": {
+        "prettier/prettier": [
+          "error",
+          // Important to force prettier to use "markdown" parser - otherwise it wouldn't be able to parse *.md files.
+          // You also can configure other options supported by prettier here - "prose-wrap" is
+          // particularly useful for *.md files
+          {
+            "parser": "markdown",
+            "proseWrap": "always"
+          }
+        ]
+      }
+    }
+  ]*/
+}
