--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-    "semi": false,
-    "trailingComma": "none",
-    "printWidth": 96
-  }
-  
+  "semi": false,
+  "trailingComma": "none",
+  "printWidth": 100,
+  "proseWrap": "always"
+}
