--- a/package.json
+++ b/package.json
@@ -79,22 +79,37 @@
     "@vue/cli-plugin-typescript": "^4.5.13",
     "babel-eslint": "^10.1.0",
     "conventional-changelog-cli": "^2.1.1",
+    "dictionary-en-us": "^3.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier-vue": "^3.1.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.17.0",
     "git-cz": "^4.7.6",
+    "markdown-eslint-parser": "^1.2.1",
     "prettier": "^2.3.2",
+    "remark-cli": "^10.0.0",
+    "remark-frontmatter": "^4.0.0",
+    "remark-preset-lint-consistent": "^5.0.1",
+    "remark-preset-lint-markdown-style-guide": "^5.0.1",
+    "remark-preset-lint-recommended": "^6.0.1",
+    "remark-retext": "^5.0.0",
+    "retext-english": "^4.1.0",
+    "retext-repeated-words": "^4.1.0",
+    "retext-sentence-spacing": "^5.1.0",
+    "retext-spell": "^5.1.0",
+    "retext-syntax-urls": "^3.1.0",
+    "retext-usage": "^0.5.0",
     "rollup": "^2.56.3",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-flow-no-whitespace": "^1.0.0",
     "rollup-plugin-replace": "^2.2.0",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.2",
+    "unified": "^10.1.0",
     "vite": "^2.5.1",
     "vite-plugin-banner": "^0.1.3",
     "vue": "^3.2.6",
