--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "url": "https://github.com/mfw78/web3modal-vue3/issues"
   },
   "vetur": {
-    "tags": "vetur/tags.json",
-    "attributes": "vetur/attributes.json"
+    "tags": "dist/vetur/tags.json",
+    "attributes": "dist/vetur/attributes.json"
   },
   "dependencies": {
     "detect-browser": "^5.2.0",
@@ -63,6 +63,7 @@
   },
   "scripts": {
     "build": "vite build",
+    "build:vetur-meta": "node docgen.cjs",
     "changelog": "conventional-changelog -p angular -r 2 -i CHANGELOG.md -s",
     "release": "bash scripts/release.sh",
     "commit": "git-cz"
